--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,5 +13,9 @@
     </div>
     <div class="card-footer">
         <button class="btn btn-success" (click)="submit()">Login</button>
+        <br><br>
+    <p>No account? <a href="/register">Register</a></p>
+    <p>If you forgot your password, <a href="https://game-store-project.auth.us-east-1.amazoncognito.com/forgotPassword?client_id=3vide0n9rf77tv3nn10vpdq07p&response_type=code&scope=aws.cognito.signin.user.admin+email+openid+profile&redirect_uri=localhost:4200">Click here</a></p>
     </div>
+    
 </div>
