--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -4,12 +4,10 @@
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
                 <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
             </form>
-
-            <app-genres-select (selected)="getGenres($event)"></app-genres-select>
             
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link text-white mr-3" routerLink="latestGames">Latest Games</a>
+                    <a class="nav-link text-white mr-3" routerLink="games">Games</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white mr-3" routerLink="addGames">Add Games</a>
