--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,21 +1,24 @@
-<div class="card">
-    <div class="card-header">
-        <h3>Login</h3>
-    </div>
-    <div class="card-body">
-        <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" class="form-control" id="username" [(ngModel)]="username">
-            <label for="password">Password:</label>
-            <input type="password" class="form-control" id="password" [(ngModel)]="password">
-            <label *ngIf="errorMsg!=''">{{errorMsg}}</label>
+<div class="container">
+    <div class="">
+        <div class="card-header bg-white">
+            <h3>Login</h3>
         </div>
-    </div>
-    <div class="card-footer">
-        <button class="btn btn-success" (click)="submit()">Login</button>
-        <br><br>
-    <p>No account? <a href="/register">Register</a></p>
-    <p>If you forgot your password, <a href="https://game-store-project.auth.us-east-1.amazoncognito.com/forgotPassword?client_id=3vide0n9rf77tv3nn10vpdq07p&response_type=code&scope=aws.cognito.signin.user.admin+email+openid+profile&redirect_uri=localhost:4200">Click here</a></p>
-    </div>
+        <div class="card-body">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" class="form-control" id="username" [(ngModel)]="username">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" id="password" [(ngModel)]="password">
+                <label *ngIf="errorMsg!=''">{{errorMsg}}</label>
+            </div>
+        </div>
     
+        <div class="card-footer bg-white">
+            <button class="btn btn-success" (click)="submit()">Login</button>
+            <br><br>
+            <p>No account? <a href="/register">Register</a></p>
+            <p>If you forgot your password, <a href="https://game-store-project.auth.us-east-1.amazoncognito.com/forgotPassword?client_id=3vide0n9rf77tv3nn10vpdq07p&response_type=code&scope=aws.cognito.signin.user.admin+email+openid+profile&redirect_uri=localhost:4200">Click here</a></p>
+        </div>  
+    </div>
+
 </div>
