--- a/src/app/game-list-page/game-list-page.component.html
+++ b/src/app/game-list-page/game-list-page.component.html
@@ -1,4 +1,5 @@
-<app-genres-select></app-genres-select>
+<app-genres-select (chosenGenreEvent)="this.chosenGenre=$event"></app-genres-select>
+<!-- This sets this.chosenGenre to app-genres-select.chosenGenre -->
 
 <div class="album py-5 bg-light">
     <div class="container">
@@ -6,9 +7,9 @@
             <!--<div class="col-sm" *ngFor="let i of gamesService.getGames()">
                 <app-game-display [game]="i"></app-game-display>
             </div>-->
-            <div class="col-sm" *ngFor="let g of games| genreFilter:genresComp.chosenGenre; let i = index">
+            <div class="col-sm" *ngFor="let g of games| genreFilter:this.chosenGenre; let i = index">
                 <app-game-display [game]="g"></app-game-display>
             </div>
         </div>
-    </div>        
+    </div>
 </div>
