--- a/src/app/genres-select/genres-select.component.html
+++ b/src/app/genres-select/genres-select.component.html
@@ -1,7 +1,7 @@
 <nav class="py bg-dark text-white">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-           <!--<div class="dropdown">
+            <!--<div class="dropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -20,14 +20,14 @@
             </div>-->
 
             <div class="col">
-              <select class="col form-control sm" [(ngModel)]="chosenGenre">
+                <select class="col form-control sm" [(ngModel)]="chosenGenre" (change)="onGenreChanged($event)">
                   <option value="">All Genres</option>
                   <option value="MMORPG">MMORPG</option>
                   <option value="Racing">Racing</option>
                   <option value="Action">Action</option>
                   <option value="Adventure">Adventure</option>
               </select>
-          </div>
+            </div>
         </div>
     </div>
 </nav>
