--- a/src/app/game-display/game-display.component.html
+++ b/src/app/game-display/game-display.component.html
@@ -3,7 +3,7 @@
     <div class="card-body">
         <h5 class="card-title">{{game.gameName}}</h5>
         <div class="d-flex justify-content-between align-items-center">
-            <p class="card-text">{{game.gamePrice}}</p>
+            <p class="card-text">€ {{game.gamePrice}}</p>
         </div>
     </div>
 </div>
