--- a/src/app/game-display/game-display.component.html
+++ b/src/app/game-display/game-display.component.html
@@ -5,5 +5,6 @@
         <div class="d-flex justify-content-between align-items-center">
             <p class="card-text">€ {{game.gamePrice}}</p>
         </div>
+        <a href="/gameinfo/{{game.gameID}}" class="stretched-link"></a>
     </div>
 </div>
