styles and visual changes

--- a/src/app/game-display/game-display.component.html
+++ b/src/app/game-display/game-display.component.html
@@ -1,5 +1,5 @@
-<div class="card shadow-sm" routerLink="orderPage">
-    <img class="card-img-top" width="100%" height="225" src={{game.gamePic}} alt="game img">
+<div class="card shadow bg-dark">
+    <img class="card-img-top" src={{game.gamePic}} alt="game img">
     <div class="card-body">
         <h5 class="card-title">{{game.gameName}}</h5>
         <div class="d-flex justify-content-between align-items-center">
