--- a/src/app/game-list-page/game-list-page.component.html
+++ b/src/app/game-list-page/game-list-page.component.html
@@ -1,12 +1,9 @@
 <app-genres-select (chosenGenreEvent)="this.chosenGenre=$event"></app-genres-select>
 <!-- This sets this.chosenGenre to app-genres-select.chosenGenre -->
 
-<div class="album py-5 bg-light">
+<div class="album py-5">
     <div class="container">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            <!--<div class="col-sm" *ngFor="let i of gamesService.getGames()">
-                <app-game-display [game]="i"></app-game-display>
-            </div>-->
+        <div class="row row-cols-sm-4 g-3">
             <div class="col-sm" *ngFor="let g of games| genreFilter:this.chosenGenre; let i = index">
                 <app-game-display [game]="g"></app-game-display>
             </div>
