--- a/src/app/game-page/game-page.component.html
+++ b/src/app/game-page/game-page.component.html
@@ -1,34 +1,23 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-5">
-            <div id="productImage" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="..." alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="..." alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="..." alt="Third slide">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#productImage" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#productImage" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
+        <div class="col-md-3 g-5">
+            <img class="d-block w-100" src="{{game.gamePic}}" alt="game pic">
         </div>
-        <div class="col-md-7">
+        <div class="col-md-6">
             <p class="newarrival text-centre">NEW</p>
-            <h2>{{game.gameName}}</h2>
-            <h2>Description:</h2>
-            <p>{{game.gameDescription}}</p>
+            <h1>{{game.gameName}}</h1>
+            <h2>€ {{game.gamePrice}}</h2>
+            <h3>Genre:</h3>
+            <p>{{game.gameGenre}}</p>
+            <br>
             <button class="btn btn-primary">Add to Cart</button>
         </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <h4>About</h4>
+        <p>{{game.gameDesc}}</p>
+        <br>
     </div>
 </div>
