--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,11 @@
-<div class="container">
-    <div class="">
-        <div class="card-header bg-white">
+<div class="container p-5">
+    <h1 class="display-1 justify-content-center">
+       VDK.GG
+    </h1>
+</div>
+<div class="container p-5 col-sm-5">
+    <div class="card bg-dark">
+        <div class="card-header">
             <h3>Login</h3>
         </div>
         <div class="card-body">
@@ -13,7 +18,7 @@
             </div>
         </div>
     
-        <div class="card-footer bg-white">
+        <div class="card-footer">
             <button class="btn btn-success" (click)="submit()">Login</button>
             <br><br>
             <p>No account? <a href="/register">Register</a></p>
