--- a/src/app/add-games/add-games.component.html
+++ b/src/app/add-games/add-games.component.html
@@ -20,7 +20,7 @@
             
                 <div class="form-group">
                     <label for="gameDescription">Game Description</label>
-                    <input type="text" name="gameDescription" class="form-control" [(ngModel)]="game.gameDesc" [readonly]="notEditable">        
+                    <input type="text" name="gameDesc" class="form-control" [(ngModel)]="game.gameDesc" [readonly]="notEditable">        
                 </div>
             
                 <div class="form-group">
