--- a/src/app/game-page/game-page.component.html
+++ b/src/app/game-page/game-page.component.html
@@ -1,14 +1,14 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3 g-5">
-            <img class="d-block w-100" src="{{game.gamePic}}" alt="game pic">
+            <img class="d-block w-100" src="{{games.gamePic}}" alt="game pic">
         </div>
         <div class="col-md-6">
             <p class="newarrival text-centre">NEW</p>
-            <h1>{{game.gameName}}</h1>
-            <h2>€ {{game.gamePrice}}</h2>
+            <h1>{{games.gameName}}</h1>
+            <h2>€ {{games.gamePrice}}</h2>
             <h3>Genre:</h3>
-            <p>{{game.gameGenre}}</p>
+            <p>{{games.gameGenre}}</p>
             <br>
             <button class="btn btn-primary">Add to Cart</button>
         </div>
@@ -17,7 +17,7 @@
 <div class="container">
     <div class="row">
         <h4>About</h4>
-        <p>{{game.gameDesc}}</p>
+        <p>{{games.gameDesc}}</p>
         <br>
     </div>
 </div>
