--- a/src/app/game-page/game-page.component.html
+++ b/src/app/game-page/game-page.component.html
@@ -10,7 +10,7 @@
             <h3>Genre:</h3>
             <p>{{game.gameGenre}}</p>
             <br>
-            <button class="btn btn-primary">Add to Cart</button>
+            <button class="btn btn-primary" routerLink="checkout">Place Order</button>
         </div>
     </div>
 </div>
