--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,11 @@
-<div class="container p-5">
-    <h1 class="display-1 justify-content-center">
-       VDK.GG
-    </h1>
+<div class="container">
+    <div class="py-5 text-center">
+        <h1 class="display-1 justify-content-center">
+          VDK.gg
+       </h1>
+    </div>
 </div>
+
 <div class="container p-5 col-sm-5">
     <div class="card bg-dark">
         <div class="card-header">
