New game component to show side by side with add

--- a/src/app/add-games-page/add-games-page.component.html
+++ b/src/app/add-games-page/add-games-page.component.html
@@ -1,4 +1,4 @@
 <div class="row">
-    <app-game-page (game)="getGame($event)" class="col"></app-game-page>
+    <app-game (game)="getGame($event)" class="col"></app-game>
     <app-add-games [game]="game" class="col"></app-add-games>
 </div> 
