--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="py-5 text-center">
         <h1 class="display-1 justify-content-center">
-          VDK.gg
-       </h1>
+            VDK.gg
+        </h1>
     </div>
 </div>
 
@@ -20,13 +20,13 @@
                 <label *ngIf="errorMsg!=''">{{errorMsg}}</label>
             </div>
         </div>
-    
+
         <div class="card-footer">
             <button class="btn btn-success" (click)="submit()">Login</button>
             <br><br>
             <p>No account? <a href="/register">Register</a></p>
-            <p>If you forgot your password, <a href="https://game-store-project.auth.us-east-1.amazoncognito.com/forgotPassword?client_id=3vide0n9rf77tv3nn10vpdq07p&response_type=code&scope=aws.cognito.signin.user.admin+email+openid+profile&redirect_uri=localhost:4200">Click here</a></p>
-        </div>  
+            <p>If you forgot your password, <a href="https://game-store.auth.us-east-1.amazoncognito.com/forgotPassword?client_id=1dt06sc8ku8m5q6djfjn9op03o&response_type=code&scope=aws.cognito.signin.user.admin+email+openid+profile&redirect_uri=localhost:4200">Click here</a></p>
+        </div>
     </div>
 
 </div>
