--- a/src/app/add-games-page/add-games-page.component.html
+++ b/src/app/add-games-page/add-games-page.component.html
@@ -1,4 +1,12 @@
+<div class="container">
+    <div class="py-5 text-center">
+        <h1 class="display-1 justify-content-center">
+          Manage Games
+       </h1>
+    </div>
+</div>
 <div class="row">
     <app-game (game)="getGame($event)" class="col"></app-game>
     <app-add-games [game]="game" class="col"></app-add-games>
-</div> 
+</div>
+
