--- a/src/app/add-games/add-games.component.html
+++ b/src/app/add-games/add-games.component.html
@@ -1,10 +1,7 @@
-<div class="container p-5">
-    
-</div>
-<div class="container col-5">
+<div class="container col">
     <div class="card bg-dark">
         <div class="card-header">
-            <h3>Add Game</h3>
+            <h3>Game Details</h3>
         </div>
         <form (ngSubmit)="onSubmit(addForm)" #addForm="ngForm"> 
             <div class="card-body">
