--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,22 +1,19 @@
-<div class="card">
-    <div class="card-header">
-    <div class="row">
-    <div class="col">
-        <h3>Games</h3>
-    </div>
-    <div class="col">
-        <input type="text" [(ngModel)]="searchText" class="form-control ml-auto float-sm-right">
-    </div>
-    </div>
+<div class="container col">
+    <div class="card bg-dark">
+        <div class="card-header">
+            <h3>Games List</h3>
+            <!--<input type="text" [(ngModel)]="searchText" class="form-control ml-auto float-sm-right">-->   
+        </div>
     </div>
     <div class="card-body">
-    <ul class="list-group">
-        <li class="list-group-item list-group-item-action"
-         *ngFor="let g of games let i = index" 
-         (click)="selected(g)"
-         [class.active]="g==selectedGame">
-            {{g.gameName}}
-        </li>
-    </ul>
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-action"
+                *ngFor="let g of games let i = index" 
+                (click)="selected(g)"
+                [class.active]="g==selectedGame">
+                {{g.gameName}}
+            </li>
+         </ul>
     </div>
-    </div>
+</div>
+
