better looking order summary

--- a/src/app/checkout-page/checkout-page.component.html
+++ b/src/app/checkout-page/checkout-page.component.html
@@ -5,35 +5,36 @@
         </h1>
     </div>
 </div>
-<div class="container">
-    <table class="table bg-dark text-white">
-        <tr>
-            <th>Name</th>
-            <th>Surname</th>
-            <th>Email</th>
-        </tr>
-        <tbody>
-            <tr>
-                <td>{{userName}}</td>
-                <td>{{userSurname}}</td>
-                <td>{{userEmail}}</td>
-            </tr>
-        </tbody>
-    </table>
+<div class="container bg-dark text-white col-5">
+    <div class="card-header">
+        <div class="row border-bottom">
+            <div class="col"><h3>Name</h3></div>
+            <div class="col"><h3>Surname</h3></div>
+            <div class="col"><h3>Email</h3></div>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col">{{userName}}</div>
+                <div class="col">{{userSurname}}</div>
+                <div class="col">{{userEmail}}</div>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="container">
-    <table class="table bg-dark text-white">
-        <tr>
-            <th>Product</th>
-            <th>Price</th>
-            <th>Total</th>
-        </tr>
-        <tbody>
-            <tr>
-                <td>{{userName}}</td>
-                <td>{{userSurname}}</td>
-                <td>{{userEmail}}</td>
-            </tr>
-        </tbody>
-    </table>
+<br>
+<div class="container bg-dark text-white col-5">
+    <div class="card-header">
+        <div class="row border-bottom">
+            <div class="col"><h3>Product</h3></div>
+            <div class="col"><h3>Price</h3></div>
+            <div class="col"><h3>Total</h3></div>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col">{{userName}}</div>
+                <div class="col">{{userSurname}}</div>
+                <div class="col">{{userEmail}}</div>
+            </div>
+        </div>
+    </div>
 </div>
