addedd users service

--- a/src/app/checkout-page/checkout-page.component.html
+++ b/src/app/checkout-page/checkout-page.component.html
@@ -14,9 +14,9 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col">{{userName}}</div>
+                <!--<div class="col">{{userName}}</div>
                 <div class="col">{{userSurname}}</div>
-                <div class="col">{{userEmail}}</div>
+                <div class="col">{{userEmail}}</div>-->
             </div>
         </div>
     </div>
@@ -31,9 +31,9 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col">{{userName}}</div>
+                <!--<div class="col">{{userName}}</div>
                 <div class="col">{{userSurname}}</div>
-                <div class="col">{{userEmail}}</div>
+                <div class="col">{{userEmail}}</div>-->
             </div>
         </div>
     </div>
