customer profile, checkout haldf done, posible to view logge din user info.

--- a/src/app/checkout-page/checkout-page.component.html
+++ b/src/app/checkout-page/checkout-page.component.html
@@ -5,7 +5,7 @@
         </h1>
     </div>
 </div>
-<div class="container bg-dark text-white col-5">
+<div class="card bg-dark text-white col-5 mx-auto">
     <div class="card-header">
         <div class="row border-bottom">
             <div class="col"><h3>Name</h3></div>
@@ -14,15 +14,15 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <!--<div class="col">{{userName}}</div>
-                <div class="col">{{userSurname}}</div>
-                <div class="col">{{userEmail}}</div>-->
+                <div class="col">{{user.userFirstname}}</div>
+                <div class="col">{{user.userSurname}}</div>
+                <div class="col">{{user.userEmail}}</div>
             </div>
         </div>
     </div>
 </div>
 <br>
-<div class="container bg-dark text-white col-5">
+<div class="card bg-dark text-white col-5 mx-auto">
     <div class="card-header">
         <div class="row border-bottom">
             <div class="col"><h3>Product</h3></div>
