--- a/src/app/customer-profile-page/customer-profile-page.component.html
+++ b/src/app/customer-profile-page/customer-profile-page.component.html
@@ -1,1 +1,23 @@
-<p>customer-profile-page works!</p>
+<div class="container">
+    <div class="py-5 text-center">
+        <h1 class="display-1 justify-content-center">
+            Customer Profile
+        </h1>
+    </div>
+</div>
+<div class="container">
+    <div class="card bg-dark col-6 mx-auto">
+        <div class="card-body">
+                <h3>Username: <b>{{user.username}}</b></h3>
+                <h3>Name: {{user.userFirstname}}</h3>
+                <h3>Surname: {{user.userSurname}}</h3>
+                <h3>DOB: {{user.userDOB}}</h3>
+                <h3>Gender: {{user.userGender}}</h3>
+                <h3>Email: {{user.userEmail}}</h3>
+        </div>       
+    </div>
+</div>
+
+    
+
+
