--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,4 @@
-<div class="container col">
+<div class="container col mx-auto">
     <div class="card bg-dark">
         <div class="card-header">
             <h3>Games List</h3>
