--- a/src/app/add-games-page/add-games-page.component.html
+++ b/src/app/add-games-page/add-games-page.component.html
@@ -5,8 +5,12 @@
        </h1>
     </div>
 </div>
-<div class="row">
-    <app-game (game)="getGame($event)" class="col"></app-game>
-    <app-add-games [game]="game" class="col"></app-add-games>
+<div class="container">
+    <div class="row">
+        <app-game (game)="getGame($event)" class="col"></app-game>
+        <app-add-games [game]="game" class="col"></app-add-games>
+    </div>
 </div>
+    
+
 
