--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -19,6 +19,9 @@
                 
             <ul class="nav">
                 <li class="nav-item">
+                    <a class="nav-link text-white mr-3" routerLink="profile">Profile</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-white mr-3" routerLink="logout">Log Out</a>
                 </li>
             </ul>        
