--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,1 +1,17 @@
-<p>orders works!</p>
+<div class="container col mx-auto">
+    <div class="card bg-dark">
+        <div class="card-header">
+            <h3>Order List</h3>           
+        </div>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-action"
+                *ngFor="let o of order let i = index" 
+                (click)="selected(o)"
+                [class.active]="o==selectedOrder">
+                {{o.orderGames}}
+            </li>
+         </ul>
+    </div>
+</div>
