--- a/src/app/checkout-page/checkout-page.component.html
+++ b/src/app/checkout-page/checkout-page.component.html
@@ -31,10 +31,13 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <!--<div class="col">{{userName}}</div>
-                <div class="col">{{userSurname}}</div>
-                <div class="col">{{userEmail}}</div>-->
+                <div class="col">{{game.gameName}}</div>
+                <div class="col">{{game.gamePrice}}</div>
+                <div class="col">{{game.gamePrice}}</div>
             </div>
         </div>
     </div>
+</div>
+<div class="container">
+    <button class="btn btn-primary">Buy</button>
 </div>
