--- a/src/app/checkout-page/checkout-page.component.html
+++ b/src/app/checkout-page/checkout-page.component.html
@@ -27,13 +27,16 @@
         <div class="row border-bottom">
             <div class="col"><h3>Product</h3></div>
             <div class="col"><h3>Price</h3></div>
+            <div class="col"><h3>Qty</h3></div>
             <div class="col"><h3>Total</h3></div>
         </div>
         <div class="card-body">
             <div class="row">
                 <div class="col">{{game.gameName}}</div>
                 <div class="col">{{game.gamePrice}}</div>
-                <div class="col">{{game.gamePrice}}</div>
+                <div class="col">{{gameQty}}</div>
+                <div class="col">{{gameQty*game.gamePrice}}</div>
+                <div class="col">{{totalPrice}}</div>
             </div>
         </div>
     </div>
