--- a/src/app/checkout-page/checkout-page.component.html
+++ b/src/app/checkout-page/checkout-page.component.html
@@ -36,11 +36,10 @@
                 <div class="col">{{game.gamePrice}}</div>
                 <div class="col">{{gameQty}}</div>
                 <div class="col">{{gameQty*game.gamePrice}}</div>
-                <div class="col">{{totalPrice}}</div>
             </div>
         </div>
     </div>
 </div>
 <div class="container">
-    <button class="btn btn-primary">Buy</button>
+    <button class="btn btn-primary" (click)="onBuy()" routerLink="/placedOrder">Buy</button>
 </div>
