fixed add games, displays total stock

--- a/src/app/game-page/game-page.component.html
+++ b/src/app/game-page/game-page.component.html
@@ -11,6 +11,9 @@
             <p>{{game.gameGenre}}</p>
             <br>
 
+            <h4>In Stock: <b>{{maxQty}}</b></h4>
+            <br>
+
             <div class="form-group">
                 <label for="gameQty">Quantity</label>
                 <br>
