--- a/src/app/add-games/add-games.component.html
+++ b/src/app/add-games/add-games.component.html
@@ -34,10 +34,10 @@
                     <label for="gamePic">Game Image</label>
                     <input type="text" name="gamePic" class="form-control" [(ngModel)]="game.gamePic" [readonly]="notEditable">        
                 </div>
-                <div class="form-group">
+                <!--<div class="form-group">
                     <label for="gameKeys">Game Keys</label>
                     <input type="text" name="gameKeys" class="form-control" [(ngModel)]="game.gameKeys" [readonly]="notEditable">        
-                </div>
+                </div>-->
             </div>
     
             <div class="card-footer">
