--- a/src/app/orders-page/orders-page.component.html
+++ b/src/app/orders-page/orders-page.component.html
@@ -4,14 +4,14 @@
             <div class="modal-body ">
                 <div class="text-right"> <i class="fa fa-close close" data-dismiss="modal"></i> </div>
                 <div class="px-4 py-5">
-                    <h5 class="text-uppercase">order id </h5>
+                    <h5 class="text-uppercase">{{orders.orderID}}</h5>
                     <h4 class="mt-5 theme-color mb-5">Thanks for your order</h4> <span class="theme-color">Payment Summary</span>
                     <div class="mb-3">
                         <hr class="new1">
-                    </div>
-                    <div class="d-flex justify-content-between"> <span class="font-weight-bold">Quantity </span> <span class="text-muted">0</span> </div>
-                    <div class="d-flex justify-content-between"> <small>Price</small> <small>€0.00</small> </div>                    
-                    <div class="d-flex justify-content-between mt-3"> <span class="font-weight-bold">Total</span> <span class="font-weight-bold theme-color">€0.00</span> </div>                   
+                    </div>                    
+                    <div class="d-flex justify-content-between"> <span class="font-weight-bold">Quantity <b></b></span> <span class="text-muted"></span>{{orders.orderQty}} </div>                   
+                    <div class="d-flex justify-content-between mt-3"> <span class="font-weight-bold">Total</span> <span class="font-weight-bold theme-color">€{{orders.orderPrice}}</span> </div>                   
+                    <div class="d-flex justify-content-between"> <span class="font-weight-bold">Order Date: <b></b></span> <span class="text-muted"></span>{{orders.orderDate}} </div>
                 </div>
             </div>
         </div>
