messing with paypall integration

--- a/src/app/genres-select/genres-select.component.html
+++ b/src/app/genres-select/genres-select.component.html
@@ -7,6 +7,7 @@
                   <option value="MMORPG">MMORPG</option>
                   <option value="Racing">Racing</option>
                   <option value="Action">Action</option>
+                  <option value="RPG">RPG</option>
                   <option value="Adventure">Adventure</option>
                   <option value="Survival">Survival</option>
               </select>
