--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -13,7 +13,7 @@
                     <a class="nav-link text-white mr-3" routerLink="addGames">Add Games</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white mr-3" routerLink="orders">Orders</a>
+                    <a class="nav-link text-white mr-3" routerLink="userOrders">Orders</a>
                 </li>        
             </ul>
                 
