--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,9 +1,11 @@
 <nav *ngIf="auth.isLoggedIn()" class="py-3 bg-dark text-white">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-            </form>
+            <div class="form-group">
+                <input type="text" class="form-control form-control-dark" placeholder="Search...">
+            </div>
+            
+                
             
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li class="nav-item">
@@ -18,6 +20,10 @@
             </ul>
                 
             <ul class="nav">
+                <button class="btn btn-dark" routerLink="cart">
+                    <i class="fas fa-cart-plus" style="font-size: 20px;"></i>
+                    <div class="badge bg-danger" style="font-size: 10px;">{{totalCartAmount}}</div>
+                </button>
                 <li class="nav-item">
                     <a class="nav-link text-white mr-3" routerLink="profile">Profile</a>
                 </li>
