smoll changes to cart

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -17,7 +17,7 @@
                             <td>{{item.gameName}}</td>
                             <td>{{item.gamePrice}}</td>
                             <td>1</td>
-                            <td>{{item.gamePrice*2}}</td>
+                            <td>{{item.gamePrice}}</td>
                             <td>
                                 <button (click)="removeItem(item)" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
                             </td>
