--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -12,7 +12,7 @@
                     <a class="nav-link text-white mr-3" routerLink="games">Games</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white mr-3" routerLink="addGames">Add Games</a>
+                    <a class="nav-link text-white mr-3" routerLink="addGames">Manage Games</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white mr-3" routerLink="userOrders">Orders</a>
