--- a/src/app/add-games/add-games.component.html
+++ b/src/app/add-games/add-games.component.html
@@ -27,17 +27,13 @@
             
                 <div class="form-group">
                     <label for="gamePrice">Game Price</label>
-                    <input type="text" name="gamePrice" class="form-control" [(ngModel)]="game.gamePrice" [readonly]="notEditable">        
+                    <input type="number" name="gamePrice" class="form-control" [(ngModel)]="game.gamePrice" [readonly]="notEditable">        
                 </div>
             
                 <div class="form-group">
                     <label for="gamePic">Game Image</label>
                     <input type="text" name="gamePic" class="form-control" [(ngModel)]="game.gamePic" [readonly]="notEditable">        
                 </div>
-                <!--<div class="form-group">
-                    <label for="gameKeys">Game Keys</label>
-                    <input type="text" name="gameKeys" class="form-control" [(ngModel)]="game.gameKeys" [readonly]="notEditable">        
-                </div>-->
             </div>
     
             <div class="card-footer">
@@ -47,7 +43,11 @@
                     </div>
                     <div class="col-3">
                         <button class="btn btn-primary" type="button" (click)="new()">New</button>
-                    </div>                  
+                    </div>  
+                    
+                    <div class="col-3">
+                        <button class="btn btn-danger" type="button" (click)="deleteGame()">Delete</button>
+                    </div>
                 </div>
             </div> 
         </form>
