--- a/src/app/game-page/game-page.component.html
+++ b/src/app/game-page/game-page.component.html
@@ -14,14 +14,7 @@
             <h4>In Stock: <b>{{maxQty}}</b></h4>
             <br>
 
-            <!--<div class="form-group">
-                <label>Quantity</label>
-                <br>
-                <input type="number" min=0 max={{maxQty}} value="1" class="form-control" [(ngModel)]="qty" class="col-1">        
-            </div>-->
-            <br>
-
-            <button class="btn btn-primary" (click)=addToCart(game)>Add To Cart</button>
+            <button class="btn btn-primary" (click)=addToCart(game) [disabled]="noStock">{{buttonText}}</button>
             <!--<button class="btn btn-primary" routerLink="/checkout" type="submit" (click)="onPlaceOrder(qty)" [disabled]="noStock">{{buttonText}}</button>-->
         </div>
     </div>
