--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -12,10 +12,16 @@
                     <a class="nav-link text-white mr-3" routerLink="games">Games</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-white mr-3" routerLink="userOrders">Orders</a>
+                </li>        
+            </ul>
+
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li class="nav-item">
                     <a class="nav-link text-white mr-3" routerLink="addGames">Manage Games</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white mr-3" routerLink="userOrders">Orders</a>
+                    <a class="nav-link text-white mr-3" routerLink="addKeys">Add Keys</a>
                 </li>        
             </ul>
                 
