--- a/src/app/placed-order/placed-order.component.html
+++ b/src/app/placed-order/placed-order.component.html
@@ -1,1 +1,4 @@
-<p>placed-order works!</p>
+<div class="container">
+    <h1 class="display-1">Thank you for your purchase!</h1>
+    <h2>Please check Orders to find your Purchased Keys!</h2> 
+</div>
