--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,31 +1,31 @@
 <nav *ngIf="auth.isLoggedIn()" class="py-3 bg-dark text-white">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <div class="form-group">
+            <div *ngIf="!userService.checkLoggedInUserIs('ADMIN')" class="form-group">
                 <input type="text" class="form-control form-control-dark" placeholder="Search...">
             </div>
-            
-                
-            
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+
+
+
+            <ul *ngIf="!userService.checkLoggedInUserIs('ADMIN')" class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li class="nav-item">
                     <a class="nav-link text-white mr-3" routerLink="games">Games</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white mr-3" routerLink="userOrders">Orders</a>
-                </li>        
+                </li>
             </ul>
 
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <ul *ngIf="userService.checkLoggedInUserIs('ADMIN')" class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li class="nav-item">
                     <a class="nav-link text-white mr-3" routerLink="addGames">Manage Games</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white mr-3" routerLink="addKeys">Add Keys</a>
-                </li>        
+                </li>
             </ul>
-                
-            <ul class="nav">
+
+            <ul *ngIf="!userService.checkLoggedInUserIs('ADMIN')" class="nav">
                 <button class="btn btn-dark" routerLink="cart">
                     <i class="fas fa-cart-plus" style="font-size: 20px;"></i>
                     <div class="badge bg-danger" style="font-size: 10px;">{{totalCartAmount}}</div>
@@ -36,8 +36,7 @@
                 <li class="nav-item">
                     <a class="nav-link text-white mr-3" routerLink="logout">Log Out</a>
                 </li>
-            </ul>        
+            </ul>
         </div>
     </div>
 </nav>
-
