--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -25,8 +25,8 @@
                 </li>
             </ul>
 
-            <ul *ngIf="!userService.checkLoggedInUserIs('ADMIN')" class="nav">
-                <button class="btn btn-dark" routerLink="cart">
+            <ul class="nav">
+                <button *ngIf="!userService.checkLoggedInUserIs('ADMIN')" class="btn btn-dark" routerLink="cart">
                     <i class="fas fa-cart-plus" style="font-size: 20px;"></i>
                     <div class="badge bg-danger" style="font-size: 10px;">{{totalCartAmount}}</div>
                 </button>
