--- a/src/app/add-games/add-games.component.html
+++ b/src/app/add-games/add-games.component.html
@@ -3,39 +3,44 @@
         <div class="card-header">
             <h3>Game Details</h3>
         </div>
-        <form (ngSubmit)="onSubmit(addForm)" #addForm="ngForm"> 
+        <form (ngSubmit)="onSubmit(addForm)" #addForm="ngForm">
             <div class="card-body">
                 <div class="form-group">
                     <label for="gameID">Game ID</label>
-                    <input type="text" name="gameID" class="form-control" [(ngModel)]="game.gameID" [readonly]=true>        
+                    <input type="text" name="gameID" class="form-control" [(ngModel)]="game.gameID" [readonly]=true>
                 </div>
-    
+
                 <div class="form-group">
                     <label for="gameName">Game Name</label>
-                    <input type="text" name="gameName" class="form-control" [(ngModel)]="game.gameName" [readonly]="notEditable">        
+                    <input type="text" name="gameName" class="form-control" [(ngModel)]="game.gameName" [readonly]="notEditable">
                 </div>
-            
+
                 <div class="form-group">
                     <label for="gameDescription">Game Description</label>
-                    <input type="text" name="gameDesc" class="form-control" [(ngModel)]="game.gameDesc" [readonly]="notEditable">        
+                    <input type="text" name="gameDesc" class="form-control" [(ngModel)]="game.gameDesc" [readonly]="notEditable">
                 </div>
-            
+
                 <div class="form-group">
                     <label for="gameGenre">Game Genre</label>
-                    <input type="text" name="gameGenre" class="form-control" [(ngModel)]="game.gameGenre" [readonly]="notEditable">        
+                    <input type="text" name="gameGenre" class="form-control" [(ngModel)]="game.gameGenre" [readonly]="notEditable">
                 </div>
-            
+
                 <div class="form-group">
                     <label for="gamePrice">Game Price</label>
-                    <input type="number" name="gamePrice" class="form-control" [(ngModel)]="game.gamePrice" [readonly]="notEditable">        
+                    <input type="number" name="gamePrice" class="form-control" [(ngModel)]="game.gamePrice" [readonly]="notEditable">
                 </div>
-            
+
                 <div class="form-group">
                     <label for="gamePic">Game Image</label>
-                    <input type="text" name="gamePic" class="form-control" [(ngModel)]="game.gamePic" [readonly]="notEditable">        
+                    <input type="text" name="gamePic" class="form-control" [(ngModel)]="game.gamePic" [readonly]="notEditable">
+                </div>
+                <div class="form-group">
+                    <br>
+                    <input type="checkbox" name="gameHidden" [(ngModel)]="game.gameHidden" [disabled]="notEditable">
+                    <label for="gameHidden">Hidden</label>
                 </div>
             </div>
-    
+
             <div class="card-footer">
                 <div class="row">
                     <div class="col">
@@ -43,13 +48,13 @@
                     </div>
                     <div class="col-3">
                         <button class="btn btn-primary" type="button" (click)="new()">New</button>
-                    </div>  
-                    
+                    </div>
+
                     <div class="col-3">
                         <button class="btn btn-danger" type="button" (click)="deleteGame()">Delete</button>
                     </div>
                 </div>
-            </div> 
+            </div>
         </form>
     </div>
 </div>
