--- a/src/app/checkout-page/checkout-page.component.html
+++ b/src/app/checkout-page/checkout-page.component.html
@@ -41,6 +41,10 @@
 </div>
 <div class="container">
     <div class="container">
-        <button class="btn btn-primary" (click)="onBuy()" routerLink="/placedOrder">Buy</button>
+        <!--<button class="btn btn-primary" (click)="onBuy()" routerLink="/placedOrder">Buy</button>-->
     </div>
+</div>
+<br>
+<div class="container mx-auto col-4">
+    <div #paypalRef></div>
 </div>
