--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -23,6 +23,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-white mr-3" routerLink="addKeys">Add Keys</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white mr-3" routerLink="orders">Orders</a>
+                </li>
             </ul>
 
             <ul class="nav">
