--- a/src/app/orders-user/orders-user.component.html
+++ b/src/app/orders-user/orders-user.component.html
@@ -13,11 +13,10 @@
         <ul class="list-group">
             <li class="list-group-item list-group-item-action" >
                <p>Order Date: {{o.orderDate}}</p>               
-               <p>Order Total: €{{o.orderPrice}}</p>
-               <p>Order Key: {{o.orderItem[i].orderKey}}</p>
+               <p>Order Total: €{{o.orderPrice}}</p>            
             </li>
          </ul>
-         <a routerLink="/orders/{{o.orderID}}" class="stretched-link"></a>
+         <a routerLink="/order/{{o.orderID}}" class="stretched-link"></a>
         
         </div> 
 
