--- a/src/app/orders-user/orders-user.component.html
+++ b/src/app/orders-user/orders-user.component.html
@@ -5,7 +5,7 @@
        </h1>
     </div> 
 </div>  
-<ng-container *ngFor="let o of user.userOrders let i = index">
+<ng-container *ngFor="let o of user.userOrders.reverse() let i = index">
     <div class="container">
         <div class="card bg-dark col-6 mx-auto">
             <div class="card-body">
@@ -18,3 +18,4 @@
     </div> 
     <br>         
 </ng-container>
+
